--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,27 +36,29 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="300px"
-        android:layout_height="170px"
+        android:layout_width="130dp"
+        android:layout_height="70dp"
         android:layout_marginStart="50dp"
         android:layout_marginBottom="52dp"
-        android:backgroundTint="#000000"
+        android:backgroundTint="#FFFFFF"
         android:text="LOGIN"
-        android:textColor="#FFFFFF"
-        android:textSize="20sp"
+        android:textColor="#000000"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:strokeColor="#000000"
+        app:strokeWidth="2dp" />
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="300px"
-        android:layout_height="170px"
+        android:layout_width="130dp"
+        android:layout_height="70dp"
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="52dp"
         android:backgroundTint="#000000"
-        android:text="JOIN"
+        android:text="REGISTER"
         android:textColor="#FFFFFF"
-        android:textSize="20sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
