--- a/app/src/main/res/layout/activity_dogs_recipe.xml
+++ b/app/src/main/res/layout/activity_dogs_recipe.xml
@@ -52,11 +52,10 @@
 
     <ScrollView
         android:layout_width="350dp"
-        android:layout_height="586dp"
-        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
         app:layout_constraintStart_toStartOf="@id/guidelineStart"
-        app:layout_constraintTop_toBottomOf="@id/txt_title">
+        app:layout_constraintTop_toBottomOf="@id/guidelineMid1">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -89,55 +88,27 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:id="@+id/img_mat1"
+                        android:id="@+id/img_mat"
                         android:layout_width="80dp"
                         android:layout_height="80dp"
                         android:scaleType="centerInside"
 
                         app:srcCompat="@mipmap/ic_launcher" />
                     <TextView
-                        android:id="@+id/txt_mat1"
+                        android:id="@+id/txt_mat"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="다진 소고기"
                         android:layout_gravity="center"
                         android:textColor="@color/black"/>
                     <TextView
-                        android:id="@+id/txt_unit1"
+                        android:id="@+id/txt_unit"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="200g"
                         android:layout_gravity="center"
                         android:textColor="@color/black"/>
                 </LinearLayout>
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/img_mat2"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
-                        android:scaleType="centerInside"
-
-                        app:srcCompat="@mipmap/ic_launcher" />
-                    <TextView
-                        android:id="@+id/txt_mat2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="양배추"
-                        android:layout_gravity="center"
-                        android:textColor="@color/black"/>
-                    <TextView
-                        android:id="@+id/txt_unit2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="50g"
-                        android:layout_gravity="center"
-                        android:textColor="@color/black"/>
-                </LinearLayout>
-
             </LinearLayout>
             <TextView
                 android:layout_width="wrap_content"
@@ -154,7 +125,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
                     <TextView
-                        android:id="@+id/txt_stepNum1"
+                        android:id="@+id/txt_stepNum"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="8dp"
@@ -162,7 +133,7 @@
                         android:textSize="18sp"
                         android:textColor="@color/black"/>
                     <TextView
-                        android:id="@+id/txt_step1"
+                        android:id="@+id/txt_step"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="8dp"
@@ -171,38 +142,7 @@
                         android:textColor="@color/black"/>
                 </LinearLayout>
                 <ImageView
-                    android:id="@+id/img_step1"
-                    android:layout_width="300dp"
-                    android:layout_height="100dp"
-                    android:layout_gravity="center"
-                    tools:srcCompat="@color/black" />
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="350dp"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:id="@+id/txt_stepNum2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
-                        android:text="2"
-                        android:textSize="18sp"
-                        android:textColor="@color/black"/>
-                    <TextView
-                        android:id="@+id/txt_step2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
-                        android:text="소고기를 냄비 중불(350'F)에 부으세요."
-                        android:textSize="18sp"
-                        android:textColor="@color/black"/>
-                </LinearLayout>
-                <ImageView
-                    android:id="@+id/img_step2"
+                    android:id="@+id/img_step"
                     android:layout_width="300dp"
                     android:layout_height="100dp"
                     android:layout_gravity="center"
@@ -219,4 +159,21 @@
                 />
         </LinearLayout>
     </ScrollView>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineMid1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="96dp" />
+
+    <ToggleButton
+        android:id="@+id/tog_like"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Like"
+        android:background="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@+id/guidelineMid1"
+        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
+        app:layout_constraintTop_toTopOf="@+id/guidelineTop" />
 </androidx.constraintlayout.widget.ConstraintLayout>
