--- a/app/src/main/res/layout/activity_dogs_main.xml
+++ b/app/src/main/res/layout/activity_dogs_main.xml
@@ -116,11 +116,17 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-            <com.example.myapplication.RecipeList
-                android:id="@+id/rcplist"
+            <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-            </com.example.myapplication.RecipeList>
+                android:layout_height="match_parent"
+                android:id="@+id/recycler_rcp">
+
+            </androidx.recyclerview.widget.RecyclerView>
+<!--            <com.example.myapplication.RecipeList-->
+<!--                android:id="@+id/rcplist"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content">-->
+<!--            </com.example.myapplication.RecipeList>-->
         </LinearLayout>
     </ScrollView>
 
