--- a/app/src/main/res/layout/activity_cats_recipe.xml
+++ b/app/src/main/res/layout/activity_cats_recipe.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CatsRecipeActivity">
-
+    tools:context=".DogsRecipeActivity">
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineTop"
         android:layout_width="wrap_content"
@@ -32,8 +31,9 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_end="30dp" />
+
     <TextView
-        android:id="@+id/txt_cats"
+        android:id="@+id/txt_dogs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cat's"
@@ -41,6 +41,7 @@
         android:textSize="40sp"
         app:layout_constraintStart_toStartOf="@id/guidelineStart"
         app:layout_constraintTop_toTopOf="@id/guidelineTop" />
+
     <TextView
         android:id="@+id/txt_title"
         android:layout_width="wrap_content"
@@ -49,28 +50,27 @@
         android:textColor="@color/black"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="@id/guidelineStart"
-        app:layout_constraintTop_toBottomOf="@id/txt_cats" />
+        app:layout_constraintTop_toBottomOf="@id/txt_dogs" />
 
     <ScrollView
         android:layout_width="350dp"
-        android:layout_height="586dp"
-        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
         app:layout_constraintStart_toStartOf="@id/guidelineStart"
-        app:layout_constraintTop_toBottomOf="@id/txt_title">
+        app:layout_constraintTop_toBottomOf="@id/guidelineMid1">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
-        <ImageView
-            android:id="@+id/img_main"
-            android:layout_width="350dp"
-            android:layout_height="142dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="8dp"
-            tools:srcCompat="@color/black" />
+            <ImageView
+                android:id="@+id/img_main"
+                android:layout_width="350dp"
+                android:layout_height="142dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="8dp"
+                tools:srcCompat="@color/black" />
             <TextView
                 android:id="@+id/txt_tip"
                 android:layout_width="wrap_content"
@@ -84,117 +84,32 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/recycler_mat">
 
-                    <TextView
-                        android:id="@+id/txt_mat1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="현미밥"
-                        android:layout_gravity="center"
-                        android:textColor="@color/black"/>
-                    <TextView
-                        android:id="@+id/txt_unit1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="1/4cup"
-                        android:layout_gravity="center"
-                        android:textColor="@color/black"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                </androidx.recyclerview.widget.RecyclerView>
+                <!--                <com.example.myapplication.MatList-->
+                <!--                    android:layout_width="match_parent"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:id="@+id/matlist">-->
 
-                    <TextView
-                        android:id="@+id/txt_mat2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="당근"
-                        android:layout_gravity="center"
-                        android:textColor="@color/black"/>
-                    <TextView
-                        android:id="@+id/txt_unit2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="50g"
-                        android:layout_gravity="center"
-                        android:textColor="@color/black"/>
-                </LinearLayout>
-
+                <!--                </com.example.myapplication.MatList>-->
             </LinearLayout>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="조리 순서"
-            android:textColor="@color/black"
-            android:textSize="24sp"
-            android:layout_marginTop="8dp"/>
-            <LinearLayout
-                android:layout_width="350dp"
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:id="@+id/txt_stepNum1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
-                        android:text="1"
-                        android:textSize="18sp"
-                        android:textColor="@color/black"/>
-                    <TextView
-                        android:id="@+id/txt_step1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
-                        android:text="당근을 잘게 다집니다."
-                        android:textSize="18sp"
-                        android:textColor="@color/black"/>
-                </LinearLayout>
-                <ImageView
-                    android:id="@+id/img_step1"
-                    android:layout_width="300dp"
-                    android:layout_height="100dp"
-                    android:layout_gravity="center"
-                    tools:srcCompat="@color/black" />
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="350dp"
+                android:text="조리 순서"
+                android:textColor="@color/black"
+                android:textSize="24sp"
+                android:layout_marginTop="8dp"/>
+            <com.example.myapplication.StepList
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:id="@+id/txt_stepNum2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
-                        android:text="2"
-                        android:textSize="18sp"
-                        android:textColor="@color/black"/>
-                    <TextView
-                        android:id="@+id/txt_step2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
-                        android:text="프라이팬에 다진 양고기를 추가하세요."
-                        android:textSize="18sp"
-                        android:textColor="@color/black"/>
-                </LinearLayout>
-                <ImageView
-                    android:id="@+id/img_step2"
-                    android:layout_width="300dp"
-                    android:layout_height="100dp"
-                    android:layout_gravity="center"
-                    tools:srcCompat="@color/black" />
-            </LinearLayout>
+                android:id="@+id/steplist">
+
+            </com.example.myapplication.StepList>
             <Button
                 android:id="@+id/btn_complete"
                 android:layout_width="wrap_content"
@@ -207,4 +122,21 @@
         </LinearLayout>
     </ScrollView>
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guidelineMid1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="96dp" />
+
+    <ToggleButton
+        android:id="@+id/tog_like"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:background="@drawable/like_toggle"
+        android:text="Like"
+        android:textOff=" "
+        app:layout_constraintBottom_toTopOf="@+id/guidelineMid1"
+        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
+        app:layout_constraintTop_toTopOf="@+id/guidelineTop" />
 </androidx.constraintlayout.widget.ConstraintLayout>
