--- a/app/src/main/res/layout/activity_dogs_recipe.xml
+++ b/app/src/main/res/layout/activity_dogs_recipe.xml
@@ -124,21 +124,14 @@
 
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <androidx.recyclerview.widget.RecyclerView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:id="@+id/recycler_mat">
-
                 </androidx.recyclerview.widget.RecyclerView>
-<!--                <com.example.myapplication.MatList-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:id="@+id/matlist">-->
-
-<!--                </com.example.myapplication.MatList>-->
             </LinearLayout>
             <TextView
                 android:layout_width="wrap_content"
@@ -152,14 +145,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/recycler_step">
-
             </androidx.recyclerview.widget.RecyclerView>
-<!--            <com.example.myapplication.StepList-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:id="@+id/steplist">-->
-
-<!--            </com.example.myapplication.StepList>-->
             <Button
                 android:id="@+id/btn_complete"
                 android:layout_width="wrap_content"
