--- a/app/src/main/res/layout/mat_list.xml
+++ b/app/src/main/res/layout/mat_list.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
@@ -15,7 +16,6 @@
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-
                 <TextView
                 android:id="@+id/txt_mat"
                 android:layout_width="wrap_content"
